--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "poema-aleatorios",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paginapersonal1.github.io/Poemas-para-aylin",
+  "homepage": "http://paginapersonal1.github.io/Poemas-para-aylin",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
